--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
-    "@prisma/client": "^4.14.0",
+    "@prisma/client": "^5.9.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -24,11 +24,14 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "lucide-react": "^0.293.0",
-    "next": "^13.4.2",
+    "next": "^14.1.0",
     "next-auth": "^4.22.1",
+    "next-swagger-doc": "^0.4.0",
+    "pnpm": "^8.15.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "swagger-ui-react": "^5.11.7",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -38,7 +41,7 @@
     "eslint": "8.11.0",
     "eslint-config-next": "^13.0.5",
     "postcss": "^8.4.31",
-    "prisma": "^4.14.0",
+    "prisma": "^5.9.1",
     "tailwindcss": "^3.3.5",
     "typescript": "^4.6.2"
   }
