--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
+    "@vercel/postgres": "^0.8.0",
     "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -42,7 +43,7 @@
     "eslint": "8.11.0",
     "eslint-config-next": "^13.0.5",
     "postcss": "^8.4.31",
-    "prisma": "^5.10.2",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.3.5",
     "typescript": "^4.6.2"
   }
